[gd_scene load_steps=2 format=3 uid="uid://bhel3njrv1rwx"]

[ext_resource type="Script" path="res://skript/Body.gd" id="1_plh43"]

[node name="cabinet" type="CanvasLayer"]
script = ExtResource("1_plh43")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -20.0
offset_right = 263.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "вы открыли тумбу и видите там книгу со странными надписями"

[node name="house" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "вы испугались и убежали назад,"

[node name="open_the_book" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "открыть книгу"

[connection signal="pressed" from="VBoxContainer/house" to="." method="_on_house_pressed"]
[connection signal="pressed" from="VBoxContainer/open_the_book" to="." method="_on_open_the_book_pressed"]
