[gd_scene load_steps=2 format=3 uid="uid://bo5hitjrohhrj"]

[ext_resource type="Script" path="res://skript/Body.gd" id="1_21kuo"]

[node name="zagotovka" type="CanvasLayer"]
script = ExtResource("1_21kuo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "вы заходите в комнату и видите странный медальон, который и издавал свечение синего цвета, вы подходите к нему и берёте его в руки, 
перед вами появляеться дух молодой девушки которая просит выслушать её"

[node name="house" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "вернуться назад,"

[node name="sp" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "выслушать её"

[connection signal="pressed" from="VBoxContainer/house" to="." method="_on_house_pressed"]
[connection signal="pressed" from="VBoxContainer/sp" to="." method="_on_spirit_pressed"]
[connection signal="pressed" from="VBoxContainer/sp" to="." method="_on_sp_pressed"]
